--- a/person_list/Dockerfile
+++ b/person_list/Dockerfile
@@ -1,18 +1,8 @@
 FROM python:3.5
-RUN apt-get -y update
-RUN apt-get -y install gcc make
-RUN apt-get -y install wget unzip
-RUN wget https://github.com/StackExchange/blackbox/archive/master.zip && \
-    unzip master.zip && \
-	cd blackbox-master && \
-	make manual-install
-RUN pip install --upgrade pip
-RUN pip install --upgrade setuptools
 RUN mkdir /code
 WORKDIR /code
 ADD requirements.txt /code/
+ADD wait-for-it.sh /code/
+RUN pip install --upgrade pip
+RUN pip install --upgrade setuptools
 RUN pip install -r requirements.txt
-ADD . /code/
-RUN gpg --import gpg-deploy-key.key
-RUN blackbox_postdeploy
-RUN mv /code/configs/app_config.py /code/api/app_config.py
